@@ -1,3 +1,7 @@
+Tue May 18 8:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkprefs.c, render.c: Several small fixes to board appearance options
+
 Wed May 12 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* boards.xml, gtkprefs.c, render.c+.h, renderprefs.c:
